--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
       <!-- Преимущества -->
 
-      <section class="section section-advantages">
+      <section class="section advantages-section">
         <div class="container advantages-container">
           <h2 class="advantages-title">Чем мы занимаемся</h2>
           <ul class="advantages-list">
