--- a/index.html
+++ b/index.html
@@ -26,55 +26,57 @@
           <a class="header-logo" href="./index.html"
             ><span class="web">Web</span>Studio</a
           >
-          <nav class="nav">
-            <ul class="nav-list menu">
-              <li class="nav-item">
-                <a class="link current line" href="./index.html">Студия</a>
+          <div class="nav-header">
+            <nav class="nav">
+              <ul class="nav-list menu">
+                <li class="nav-item">
+                  <a class="link current line" href="./index.html">Студия</a>
+                </li>
+                <li class="nav-item">
+                  <a class="link" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="nav-item">
+                  <a class="link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+            <ul class="nav-list">
+              <li class="mail-phone">
+                <a class="link-mail" href="mailto:info@devstudio.com">
+                  <svg class="icon-mail" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#icon-mail"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
               </li>
               <li class="nav-item">
-                <a class="link" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li class="nav-item">
-                <a class="link" href="#">Контакты</a>
+                <a class="link-phone" href="tel:+380961111111">
+                  <svg class="icon-phone" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
               </li>
             </ul>
-          </nav>
-          <ul class="nav-list">
-            <li class="mail-phone">
-              <a class="link-mail" href="mailto:info@devstudio.com">
-                <svg class="icon-mail" width="16" height="12">
-                  <use href="./images/symbol-defs.svg#icon-mail"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="link-phone" href="tel:+380961111111">
-                <svg class="icon-phone" width="10" height="16">
-                  <use href="./images/symbol-defs.svg#icon-phone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
       </div>
     </header>
     <main>
       <!-- Герой -->
 
-      <section class="hero hero-overlay">
+      <!-- <section class="hero hero-overlay">
         <div class="container hero-container">
           <h1 class="hero-title">
             Эффективные решения<br />для вашего бизнеса
           </h1>
           <button data-open-modal class="button">Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Особенности -->
 
-      <section class="section section-features">
+      <!-- <section class="section section-features">
         <div class="container features-container">
           <h2 class="features-title visually-hidden">Особенности</h2>
           <ul class="features-list">
@@ -108,11 +110,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Преимущества -->
 
-      <section class="section advantages-section">
+      <!-- <section class="section advantages-section">
         <div class="container advantages-container">
           <h2 class="advantages-title">Чем мы занимаемся</h2>
           <ul class="advantages-list">
@@ -151,11 +153,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Команда -->
 
-      <section class="section section-team">
+      <!-- <section class="section section-team">
         <div class="container team-container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
@@ -353,63 +355,62 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+
+      <!-- Постоянные клиенты -->
+
+      <!-- <section class="section clients-section">
+        <div class="container clients-container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a class="clients-logo" href="">
+                <svg class="logo-icon" width="44" height="49">
+                  <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-logo" href="">
+                <svg class="logo-icon" width="40" height="52">
+                  <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-logo" href="">
+                <svg class="logo-icon" width="41" height="43">
+                  <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-logo" href="">
+                <svg class="logo-icon" width="80" height="42">
+                  <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-logo" href="">
+                <svg class="logo-icon" width="59" height="47">
+                  <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-logo" href="">
+                <svg class="logo-icon" width="88" height="45">
+                  <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section> -->
     </main>
-
-    <!-- Постоянные клиенты -->
-
-    <section class="section clients-section">
-      <div class="container clients-container">
-        <h2 class="clients-title">Постоянные клиенты</h2>
-        <ul class="clients-list">
-          <li class="clients-item">
-            <a class="clients-logo" href="">
-              <svg class="logo-icon" width="44" height="49">
-                <use href="./images/symbol-defs.svg#icon-logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a class="clients-logo" href="">
-              <svg class="logo-icon" width="40" height="52">
-                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a class="clients-logo" href="">
-              <svg class="logo-icon" width="41" height="43">
-                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a class="clients-logo" href="">
-              <svg class="logo-icon" width="80" height="42">
-                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a class="clients-logo" href="">
-              <svg class="logo-icon" width="59" height="47">
-                <use href="./images/symbol-defs.svg#icon-logo-5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a class="clients-logo" href="">
-              <svg class="logo-icon" width="88" height="45">
-                <use href="./images/symbol-defs.svg#icon-logo-6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
     <!-- Футер -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-contacts">
           <a class="footer-logo" href="./index.html">
@@ -460,16 +461,16 @@
         </div>
         <div class="futter-sub">
           <h3 class="footer-title">Подпишитесь на рассылку</h3>
-          <form class="form-sub">
-            <!-- <label class="form-label-sub"> -->
-            <input
+          <form class="form-sub"> -->
+    <!-- <label class="form-label-sub"> -->
+    <!-- <input
               type="e-mail"
               class="form-input-footer"
               name="e-mail"
               placeholder="E-mail"
-            />
-            <!-- </label> -->
-            <button type="submit" class="button-sub">
+            /> -->
+    <!-- </label> -->
+    <!-- <button type="submit" class="button-sub">
               Подписаться
               <svg class="buttons-sub" width="24" height="24">
                 <use
@@ -480,8 +481,8 @@
           </form>
         </div>
       </div>
-    </footer>
-
+    </footer> -->
+    <!-- 
     <div class="backdrop is-hidden" data-backdrop>
       <div class="modal">
         <form class="form">
@@ -548,7 +549,7 @@
           <button type="submit" class="button-modal">Отправить</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <script>
       const refs = {
